# futures-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: lib.rs
src/futures/: either.rs  flatten.rs  flatten_stream.rs  fuse.rs  inspect.rs  into_stream.rs  map.rs  map_into.rs  mod.rs  shared.rs  then.rs
