[package]
name = "futures-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
futures-util = "0.3.31"
pin-project = "1.1.7"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
